- new parameter "constraints/linear/simplifyinequalities" to enable a simplification step for inequalities; default value is set to FALSE = disabled
- new parameter "constraints/linear/dualpresolving" to disable dual presolving step in the linear constraint handler; default value is TRUE

fixed bugs:
- added handling of the case of roundable variables with 0 objective in presol_dualfix.c
- fixed handling of unbounded variables with 0 objective in SCIPlpGetModifiedPseudo[Proved]Objval() (lp.c)
- fixed CTRL-C if NO_SIGACTION is set (e.g., for MinGW)
- fixed bug that a missing CONSTRANS in constraint handler leads to NULL pointer as constraint data for the
  copied constraints instead of pointer copies of the consdata (as explained in the constraint handler "HowTo")
- fixed bug with reading empty lines in TSP example
- fixed bug with writing the MIP relaxation to a file concerning the objective function; in case the original 
  objective function is requested, the transformed objective function gets re-transformed (scaling, offset)  
- added checks whether a plugin (handler) has already been included to avoid later complications e.g. with parameters.
- fixed obvious bug in linear constraint data sorting. Most part of the code assumed pure index sorting, but in fact,
  it was sorted by variable type as first criterion and index as second criterion.
- fixed bug with wrong objective sense output for transformed problem. The transformed problem is always a minimization
  problem!
- fixed numerical issue in linear constraint propagation: need slightly more aggressive tightening such that probing does
  not choose a wrong value for fixing inside an epsilon interval
- fixed bug with objective scaling after restart
- fixed bug with useless objective cutoff in LNS heuristics
- fixed bug with wrong 'tightened' return value of some of the change bounds methods
- fixed bug with non-conformal parameter name in reader_ppm